# fireurl

./: .editorconfig  .gitignore  AUTHORS  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  dist.sh
src/: lib.rs  utils.rs
systemd/: fireurld.service
