[package]
name = "fireurl"
version = "0.3.1"
edition = "2021"
rust-version = "1.61"
description = "Fixing the firejail URL open issue"
repository = "https://github.com/rusty-snake/fireurl"
license = "MIT"
#default-run = ""

[dependencies]
libc = "0.2"

[profile.release]
lto = "thin"
strip = "debuginfo"
